edit sizes and fixed details z-index

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ p {
 }
 
 .left-block {
+    z-index: 1100;
     text-align: center;
     height: 90vh;
     display: flex;
@@ -33,74 +34,74 @@ p {
 #random-text {
     position: absolute;
     z-index: 2;
-    opacity: 1;
+    opacity: 0.2;
 }
 
 #random-text1 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text2 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text3 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text4 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text5 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text6 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text7 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text8 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 #random-text9 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 #random-text10 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 #random-text11 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 #random-text12 {
     position: absolute;
     z-index: 2;
-    opacity: 0.5;
+    opacity: 0.4;
 }
